--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
           <address class="mobile-menu-contact">
             <ul class="mobile-menu-contact-list">
               <li>
-                <a class="mobile-menu-contact-link" href="tel:+110001111111">
+                <a
+                  class="mobile-menu-contact-link mobile"
+                  href="tel:+110001111111"
+                >
                   +11 (000) 111-11-11
                 </a>
               </li>
@@ -809,11 +812,12 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
-              <a class="modal-field-privacy-link" href=""
-                >Privacy Policy</a
-              ></label
-            >
+
+              <span class="modal-field-privacy-text">
+                I accept the terms and conditions of the
+                <a class="modal-field-privacy-link" href="">Privacy Policy</a>
+              </span>
+            </label>
           </div>
           <button class="modal-submit-btn" type="submit">Send</button>
         </form>
